# file-encryption-tool

./: .gitignore  README.md  pyproject.toml  test.enc
src/sfe/: __init__.py  cli.py  crypto.py  exceptions.py  kdf.py  utils.py
