[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sfe"
version = "0.1.0"
description = "Secure file encryption tool using AES-GCM"
dependencies = ["cryptography"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sfe = "sfe.cli:main"